fix(AV-1648): If guide menu content doesn't fit on screen, make it scrollable

--- a/src/less/drupal/menu.less
+++ b/src/less/drupal/menu.less
@@ -3,6 +3,8 @@
   top: 0;
   position: -webkit-sticky;
   position: sticky;
+  max-height: 100vh;
+  overflow: auto;
 
   .opendata-card {
     border-top: none;
